# api-testing-cli

./: Cargo.toml  LICENSE  README.md  install.bash  install.sh  sample.json
src/: main.rs
